@@ -1,10 +1,0 @@
-######################################################################
-# Automatically generated by qmake (2.00a) Sun Aug 14 16:10:42 2005
-######################################################################
-
-TEMPLATE = subdirs
-DEPENDPATH += .
-INCLUDEPATH += .
-QT += network
-
-SUBDIRS = src
