@@ -1,5 +1,12 @@
 $Id$
 
+2006-05-13 Maarten ter Huurne <maarten@treewalker.org>
+	* Added support for UI files in the new build system.
+	* Got rid of the qmake build, since the generated UI headers in src/
+	  were interfering with the new build system.
+	  Make sure you get rid of the files generated by qmake; CVS will tell
+	  you which files.
+
 2006-05-12 Wouter Vermaelen <wouter.vermaelen@scarlet.be>
 	* Replaced connection code:
 	   - this code _should_ also work on windows
